Fix h1 gallery alignment for small devices

--- a/src/app/Components/gallery/gallery.component.scss
+++ b/src/app/Components/gallery/gallery.component.scss
@@ -28,3 +28,9 @@ button {
 button:hover {
   opacity: 70%;
 }
+@media (max-width: 976px) {
+  h1 {
+    text-align: center;
+    margin: auto;
+  }
+}
